<resources>
    <string name="app_name" translatable="false">Offline Tutorial</string>
    <string name="sync_account_type">offlinetutorial.android.muilat.com</string>
    <string name="content_authority">com.muilat.android.offlinetutorial</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Offline Tutorial</string>
    <string name="nav_header_subtitle">Learn with fun</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="favourites" translatable="false">Favourites</string>
    <string name="communicate" translatable="false">Communicate</string>

    <string name="answer_correct">Congratulations! That is correct!</string>
    <string name="answer_wrong">Sorry, that is not correct. Try again!</string>


    <!--text size strings-->
    <string name="pref_text_size_label_small">Small</string>
    <string name="pref_text_size_label_medium">Medium</string>
    <string name="pref_text_size_label_large">Large</string>
    <string name="pref_text_size_small_value" translatable="false">small_size</string>
    <string name="pref_text_size_medium_value" translatable="false">medium_size</string>
    <string name="pref_text_size_large_value" translatable="false">large_size</string>
    <string name="action_quiz">Quiz</string>
    <string name="pref_text_size_key">text_size_key</string>
    <string name="pref_text_size_label">Text Size</string>
    <string name="pref_quiz_no_default">10</string>
    <string name="pref_quiz_no_key">quiz_number</string>
    <string name="pref_quiz_no_label">Number of Quiz</string>
    <string name="designed_developed_by_muilat">Designed &amp; Developed by Muilat-champ</string>
    <string name="lesson_report">/</string>
    <string name="rate_app">Rate App</string>
    <string name="share">Share</string>
    <string name="others">Others</string>
    <string name="about">About App</string>
    <string name="no_data_found">No data Found!</string>
    <string name="are_you_sure_you_want_to_delete_all_favourite_lessons">Are you sure you want to delete all favourite lessons?</string>
    <string name="action_confirm">Action confirmation!</string>
    <string name="exit">Yes Exit</string>
    <string name="exit_message">Do you really want to exit quiz?</string>
    <string name="no_internet">No internet connection</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_slogan">Learn with fun</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="check_your_internet_connection_and_retry">Check your internet connection and retry</string>
    <string name="needs_to_fetch_data">Offline Tutorial App needs to fetch data from the net on first instalation</string>
</resources>
