<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!---->
    <!--<CheckBoxPreference-->
    <!--android:defaultValue="@bool/pref_show_treble_default"-->
    <!--android:key="@string/pref_show_treble_key"-->
    <!--android:summaryOff="@string/pref_show_false"-->
    <!--android:summaryOn="@string/pref_show_true"-->
    <!--android:title="@string/pref_show_treble_label" />-->

    <!--<EditTextPreference-->
    <!--android:defaultValue="@string/pref_size_default"-->
    <!--android:key="@string/pref_size_key"-->
    <!--android:title="@string/pref_size_label" />-->

    <ListPreference
        android:defaultValue="@string/pref_text_size_small_value"
        android:entries="@array/pref_text_size_option_labels"
        android:entryValues="@array/pref_text_size_option_values"
        android:key="@string/pref_text_size_key"
        android:title="@string/pref_text_size_label" />

</PreferenceScreen>
